sample/error/module_import-rec_1.bfr
open import "module_import-rec_2.bfr"

codegen []